--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ydui-district-test",
-  "version": "1.0.3",
-  "description": "Data files of provinces and cities from JD.",
+  "name": "ydui-district",
+  "version": "1.0.0",
+  "description": "Data of provinces, cities and counties in china.",
   "files": [
     "dist"
   ],
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://git.oschina.net/surging/ydui-district.git"
+    "url": "https://github.com/ydcss/ydui-district.git"
   },
   "author": "ydcss.com",
   "license": "ISC",
